manifests/openshift/frontend/skillhub/templates/deployment-config-os.yaml
##---
# Source: skillhub/templates/deployment-config-os.yaml


apiVersion: v1
kind: DeploymentConfig

metadata:
    name: frontend
    labels:
        app: skillhub
        run: frontend

spec:
    replicas: 1
    selector:
        run: frontend
    template:
        metadata:
            labels:
                run: frontend
        spec:
            containers:
            - name: frontend
              image: docker-registry.default.svc:5000/skillhub/frontend:latest
              imagePullPolicy: Always
              ports:
              - containerPort: 3000

    triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
          automatic: true
          containerNames:
          - frontend
          from:
              kind: ImageStreamTag
              name: "frontend:latest"
