manifests/openshift/frontend/skillhub/templates/route-os.yaml
##---
# Source: skillhub/templates/route-os.yaml


apiVersion: v1
kind: Route
metadata:
    name: frontend
    labels:
        app: skillhub
        run: frontend
    annotations:
        haproxy.router.openshift.io/timeout: 600s
spec:
    host: skillhub.apps.ic.gc.ca
    tls:
        insecureEdgeTerminationPolicy: Redirect
        termination: edge
    to:
        kind: Service
        name: frontend
        weight: 100
    wildcardPolicy: None
